[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5.8"
ctrlc = "3.4.1"
cty = "0.2.2"
libc = "0.2.148"
os_socketaddr = "0.2.5"

[build-dependencies]
cc = "1.0"
